Closed Bug 1572595 Opened 5 years ago Closed 5 years ago

ARIA 1.0 Combobox pattern is broken in Android FF with TalkBack enabled

Categories

(Core :: Disability Access APIs, defect, P1)

68 Branch
ARM
Android
defect

Tracking

()

RESOLVED FIXED
mozilla72
Tracking Status
firefox-esr68 --- wontfix
firefox68 --- wontfix
firefox69 --- wontfix
firefox70 --- wontfix
firefox71 --- wontfix
firefox72 --- fixed

People

(Reporter: diane.ko, Assigned: Jamie)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.87 Safari/537.36

Steps to reproduce:

  1. Turn on TalkBack on an Android phone
  2. Open FF for Android
  3. Go to the ARIA documentation demo page for the ARIA 1.0 Combobox pattern (http://w3c.github.io/aria-practices/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html)
  4. Navigate to the Example
  5. Attempt to navigate to the text box.

Actual results:

The textbox can't be selected at all. TalkBack bypasses it completely. It's also not possible to manually move focus to the textbox by tapping on it.

Expected results:

The textbox should be selectable so that the user can type into the input field.

According to the ARIA Practices guide (http://w3c.github.io/aria-practices/#combobox), while the ARIA 1.1 Combobox pattern is recommended, ARIA 1.0 has no plans to be deprecated. This makes the 1.0 pattern a safer implementation pattern for developers in browsers that have not yet introduced support for ARIA 1.1 patterns (such as mobile Safari). Chrome has support for both the ARIA 1.1 pattern and the ARIA 1.0 pattern. The loss of support for ARIA 1.0 is a major problem, as it makes any component that uses it completely unusable.

Hello,

I tested your issue on Release 68.0 Beta 68.1b5 and Nightly 70.0a1 using a Huawei MediaPad M3 Lite 10 (Android 7.0) and managed to reproduce it. I will set this issue as new. The issue does not occur on Chrome.

Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Unspecified → Android
Hardware: Unspecified → ARM

James, what do you think we should do with this report?

Flags: needinfo?(jteh)

Eitan, any ideas? I guess we need to expose editable combo boxes differently on Android to make Talkback happy?

Component: General → Disability Access APIs
Flags: needinfo?(jteh) → needinfo?(eitan)
Priority: -- → P1
Product: Firefox for Android → Core
Version: Firefox 68 → 68 Branch
Assignee: nobody → jteh
Flags: needinfo?(eitan)

ARIA role="combobox" gets a Gecko role of EDITCOMBOBOX.
However, there are two kinds of ARIA comboboxes:

  1. ARIA 1.0 comboboxes are contentEditable. Text is entered into the combobox itself.
  2. ARIA 1.1 comboboxes are not contentEditable. Instead, they have a textbox child into which text is entered.

On Android, traversal skipped EDITCOMBOBOX Accessibles altogether.
This meant that while 1.1 comboboxes were accessible (because we'd walk inside and land on the textbox), 1.0 comboboxes were not.

We still don't want to land on 1.1 comboboxes because the container isn't useful to the user.
Therefore, only stop on EDITCOMBOBOX Accessibles which are editable.

Pushed by jteh@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6db04177c6a4
Make ARIA 1.0 combo boxes reachable with Talkback. r=MarcoZ
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72

Since the status are different for nightly and release, what's the status for beta?
For more information, please visit auto_nag documentation.

I have tested the issue on Firefox Preview Nightly build:: 191210 (Build #13440605) 12/10 and I was unable to reproduce the issue.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: